--- a/theme/clean/style/custom.css
+++ b/theme/clean/style/custom.css
@@ -17,7 +17,7 @@ input[type="submit"], input[type="text"]+button, .fp-upload-btn.btn-primary {
     background-color: #0070a8 !important;
     background-image: none !important;
     color: #fff !important;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
 /*     font-family: "Gotham A","Gotham B",Helvetica,Arial,sans !important; */
     border: 0px solid #fff !important;
     text-shadow: 0 0px 0px #fff !important;
@@ -102,7 +102,7 @@ a:hover, a:focus{
 
 /*changes toolbar "BU Moodle" to bethel logo*/
 .brand {
-    background: url(http://cdn1.bethel.edu/images/logo--moodle.png);
+    background: url(https://cdn1.bethel.edu/images/logo--moodle.png);
     height: 30px;
     background-size: 210px 30px;
     width: 210px;
@@ -578,4 +578,3 @@ div[role=main]>h2{
 /* Custom CSS Settings
 -------------------------*/
 [[setting:customcss]]
-
